Again fixed map overlapping footer for full screen

--- a/frontend/src/components/OptimizationToolBlurb/OptimizationToolBlurb.css
+++ b/frontend/src/components/OptimizationToolBlurb/OptimizationToolBlurb.css
@@ -38,7 +38,7 @@
 
 .bottomColRight{
   width: 28vw;
-  padding-bottom: 7vh;
+  padding-bottom: 12vh;
 }
 hr{
   margin-left: 10vw;
